--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,102 @@
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+
+		<style>
+			h1, h2, h3, h4, h5, h6 {
+				text-transform: none !important;
+			}
+
+			:not(pre) > code {
+				color: #f92672;
+				font-size: calc(var(--r-main-font-size) * 0.9);
+			}
+
+			.reveal pre[data-auto-animate-target] {
+				overflow: visible;
+			}
+
+			.reveal pre code {
+				max-height: none;
+				max-width: none;
+			}
+		</style>
+		<style>
+			* {
+				box-sizing: border-box;
+			}
+
+			.overlap-children {
+				display: grid !important;
+				grid-template-areas: "area";
+				align-items: start;
+				justify-items: start;
+			}
+			.overlap-children > * {
+				grid-area: area;
+				margin-left: 0 !important;
+			}
+
+			.grid-layout {
+				display: grid !important;
+				width: 100%;
+				height: 100%;
+				padding: 1em;
+			}
+
+			.grid-layout > * {
+				margin-left: 0 !important;
+			}
+
+			.grid-layout code {
+				min-width: fit-content;
+			}
+
+			.grid-layout.title-page {
+				grid-template-columns: auto auto auto;
+				grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+				grid-template-areas:
+						".......... .......... .........."
+						"title      title      title     "
+						"only-title only-title only-title"
+						".......... subtitle   subtitle  "
+						".......... .......... ..........";
+				align-items: center;
+			}
+			.grid-layout.title-page > :only-child {
+				grid-area: only-title;
+			}
+			.grid-layout.title-page > :nth-child(1):not(:only-child) {
+				grid-area: title;
+			}
+			.grid-layout.title-page > :nth-child(2) {
+				grid-area: subtitle;
+			}
+
+			.grid-layout.title-and-side-by-side {
+				grid-template-columns: auto auto;
+				grid-template-rows: min-content;
+				grid-auto-rows: auto;
+				grid-template-areas:
+						"title      title     "
+						".......... ..........";
+				grid-auto-flow: row;
+				grid-gap: 10px;
+			}
+			.grid-layout.title-and-side-by-side > :nth-child(1) {
+				grid-area: title;
+				align-self: center;
+				justify-self: start;
+			}
+			.grid-layout.title-and-side-by-side > :not(:nth-child(1)) {
+				align-self: start;
+				justify-self: start;
+			}
+			.grid-layout.title-and-side-by-side > .place-wide:not(:nth-child(1)) {
+				grid-column-start: 1;
+				grid-column-end: 3;
+			}
+		</style>
 	</head>
 
 	<body>
