--- a/index.html
+++ b/index.html
@@ -3,12 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <title>Mercator Presentations</title>
+    <style>
+        /* Colours */
+        html {
+            background-color: #ffffff;
+
+            --col-border: #eee;
+            --col-bg-box-shadow: rgba(0, 0, 0, 0.06);
+            --col-fg-li: #4F4F4F;
+            --col-fg-strong: #292929;
+            --col-border-li-before-default: #dddddd;
+            --col-fg-li-before-odd: #00ff7f;
+            --col-fg-li-before-even: #7f00ff;
+
+            --col-fg-a-odd-default: #009944;
+            --col-fg-a-odd-active: #00ff77;
+            --col-fg-a-odd-visited: #bbeedd;
+            --col-fg-a-even-default: #440099;
+            --col-fg-a-even-active: #7700ff;
+            --col-fg-a-even-visited: #ddbbee;
+        }
+
+        a {
+            color: var(--col-fg-a-default);
+            &:visited {
+                color: var(--col-fg-a-visited);
+            }
+            &:active {
+                color: var(--col-fg-a-active);
+            }
+        }
+
+        ol.alternating-colors {
+            li:nth-child(odd) {
+                --col-fg-a-default: var(--col-fg-a-odd-default);
+                --col-fg-a-active: var(--col-fg-a-odd-active);
+                --col-fg-a-visited: var(--col-fg-a-odd-visited);
+            }
+            li:nth-child(even) {
+                --col-fg-a-default: var(--col-fg-a-even-default);
+                --col-fg-a-active: var(--col-fg-a-even-active);
+                --col-fg-a-visited: var(--col-fg-a-even-visited);
+            }
+        }
+
+    </style>
+    <style>
+        /* Source: https://codepen.io/mattc0m/pen/rNdMjKX , by mattc0m */
+        @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+        body {
+            font-family: 'Space Mono', monospace;
+            display: flex;
+            flex-direction: column;
+            max-width: 420px;
+            padding: 32px;
+            margin: 60px auto;
+            border: 1px solid var(--col-border);
+            box-shadow: 0px 12px 24px var(--col-bg-box-shadow);
+        }
+
+        * { /* make it sexy */
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-rendering: optimizelegibility;
+            letter-spacing: -0.25px;
+        }
+
+        ol { padding-left: 50px; }
+        li {
+            color: var(--col-fg-li);
+            padding-left: 16px;
+            margin-top: 24px;
+            position: relative;
+            font-size: 16px;
+            line-height: 20px;
+
+            &:before {
+                content: '';
+                display: block;
+                height: 42px;
+                width: 42px;
+                border-radius: 50%;
+                border: 2px solid var(--col-border-li-before-default);
+                position: absolute; /* yeah, you have to manually position it based on the text size, line height, etc. (in the parent li style). it's not the smarest solution */
+                top: -12px;
+                left: -46px;
+            }
+        }
+
+        strong { color: var(--col-fg-strong); }
+
+        ol.alternating-colors {
+            li:nth-child(odd):before { border-color: var(--col-fg-li-before-odd); }
+            li:nth-child(even):before { border-color: var(--col-fg-li-before-even); }
+        }
+    </style>
 </head>
 <body>
 <h1>Mercator Presentations</h1>
-<h2>Scala Presentations</h2>
-<ul>
-    <li><a href="presentation/oops-i-bracketed-again/revealjs/demo.html">Oops(I bracketed again)</a></li>
-</ul>
+<h2>Scala</h2>
+<ol class="alternating-colors">
+    <li>
+        <strong>
+            <a href="presentation/oops-i-bracketed-again/revealjs/demo.html">Oops(I bracketed again)</a>
+        </strong>
+        <p>Why string interpolation can go wrong and how to avoid it.</p>
+    </li>
+</ol>
 </body>
 </html>
