List the other presentations, even without any links.

--- a/index.html
+++ b/index.html
@@ -106,9 +106,42 @@
 <ol class="alternating-colors">
     <li>
         <strong>
+            Applicative
+        </strong>
+        <p>An intuition for the applicative type class.</p>
+    </li>
+    <li>
+        <strong>
+            Scala Type Hierarchy
+        </strong>
+        <p>How the most important Scala types relate to one another.</p>
+    </li>
+    <li>
+        <strong>
+            Scala Collections
+        </strong>
+        <p>The Scala collections and how they relate to one another.</p>
+    </li>
+    <li>
+        <strong>
+            Hash Sets
+        </strong>
+        <p>The hash set data structure and why it's fast.</p>
+    </li>
+    <li>
+        <strong>
             <a href="presentation/oops-i-bracketed-again/revealjs/demo.html">Oops(I bracketed again)</a>
         </strong>
-        <p>Why string interpolation can go wrong and how to avoid it.</p>
+        <p>Why string interpolation can go wrong and how to avoid its pitfalls.</p>
+    </li>
+</ol>
+<h2>Developer tools</h2>
+<ol class="alternating-colors">
+    <li>
+        <strong>
+            Git Objects
+        </strong>
+        <p>The basic building blocks of Git and how they are stored.</p>
     </li>
 </ol>
 </body>
