Added original Git Objects presentation link.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <ol class="alternating-colors">
     <li>
         <strong>
-            Git Objects
+            <a href="presentation/git-objects/marp/git-basics--presentation-20240524-1130.html">Git Objects</a>
         </strong>
         <p>The basic building blocks of Git and how they are stored.</p>
     </li>
