Finished copying the slides over from Jamboard.

--- a/demo.html
+++ b/demo.html
@@ -266,10 +266,65 @@
                     </div>
                 </section>
 
+                <section class="grid-layout title-and-side-by-side" data-transition="fade" data-transition-speed="fast">
+                    <h2>Merging with its brethren</h2>
+                    <div class="place-wide">
+                        <ul>
+                            <li>they need to recognise each other</li>
+                        </ul>
+                    </div>
+                    <div class="place-wide">
+                        <ul>
+                            <li>there are many ways for them to do this</li>
+                        </ul>
+                    </div>
+                    <div class="place-wide" style="width: 100%">
+                        <div style="display: grid; grid-auto-flow: column; width: 100%; justify-content: space-evenly; align-items: center;">
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/slime-lightsaber-blue.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/operation-plus.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/slime-smooth-and-desperate.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/operation-arrow.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/slime-reunited-with-lightsaber.svg"/>
+                        </div>
+                    </div>
+                    <div class="place-wide" style="width: 100%">
+                        <div style="display: grid; grid-auto-flow: column; width: 100%; justify-content: space-evenly; align-items: center;">
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/slime-lightsaber-red.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/operation-plus.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/slime-spiky-and-desperate.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/operation-arrow.svg"/>
+                            <img alt src="presentation/slide-6-merging-with-its-brethren/slime-unavailable.svg"/>
+                        </div>
+                    </div>
+
+                </section>
+
+                <section class="grid-layout title-and-side-by-side" data-transition="fade" data-transition-speed="fast" style="grid-template-columns: 1fr 1fr; gap: 0;">
+                    <h2>Might not know how to digest other slimes</h2>
+                    <small></small>
+                    <small style="text-align: left">
+                        Monads are special applicatives who CAN absorb their brethren and steal their treasures
+                    </small>
+                    <img alt src="presentation/slide-7-monads/non-monads.svg" style="justify-self: end; margin: 0;"/>
+                    <img alt src="presentation/slide-7-monads/monads.svg" style="justify-self: start; margin: 0;"/>
+                    <small data-markdown style="text-align: right; padding: 0 1em; width: 100%">
+                        No `flatMap`/`flatten`.
+                    </small>
+                    <small data-markdown style="text-align: left; padding: 0 1em; width: 100%">
+                        Monad has `flatMap`/`flatten`.
+
+                        Monads are intrinsically aggressive to their brethren.
+                    </small>
+                </section>
+
                 <section class="grid-layout title-page" data-transition="none">
                     <div>
-                        <h2>Questions?</h2>
-                        <!--<a href="https://scastie.scala-lang.org" target="_blank">Demo link</a>-->
+                        <h2>Questi<span style="user-select: none; position: absolute; display: inline-block;">
+                        <img src="presentation/slide-8-questions/slime-puzzly.svg"
+                             alt
+                             style="position: relative; left: 0.12em; top: 0.18em;"
+                        />
+                    </span>ons?</h2>
                     </div>
                 </section>
             </div>
