Small fixes in the monads slides.

--- a/demo.html
+++ b/demo.html
@@ -303,11 +303,11 @@
                     <h2>Might not know how to digest other slimes</h2>
                     <small></small>
                     <small style="text-align: left">
-                        Monads are special applicatives who CAN absorb their brethren and steal their treasures
+                        Monads are special applicatives who CAN absorb their brethren and steal their treasures.
                     </small>
                     <img alt src="presentation/slide-7-monads/non-monads.svg" style="justify-self: end; margin: 0;"/>
                     <img alt src="presentation/slide-7-monads/monads.svg" style="justify-self: start; margin: 0;"/>
-                    <small data-markdown style="text-align: right; padding: 0 1em; width: 100%">
+                    <small data-markdown style="text-align: center; padding: 0 1em; width: 100%">
                         No `flatMap`/`flatten`.
                     </small>
                     <small data-markdown style="text-align: left; padding: 0 1em; width: 100%">
