Fix size of single-line code to make it work in headings etc.

--- a/demo.html
+++ b/demo.html
@@ -28,7 +28,7 @@
 
             :not(pre) > code {
                 color: #f92672;
-                font-size: calc(var(--r-main-font-size) * 0.9);
+                font-size: calc(1em * 0.9);
             }
 
             .reveal pre[data-auto-animate-target] {
