--- a/demo.html
+++ b/demo.html
@@ -124,7 +124,7 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
                 <section class="grid-layout title-page">
-                    <h2>Oops(I bracketed again)</h2>
+                    <h2><code>Oops(I bracketed again)</code></h2>
                     <h6>Interpolation gone wrong</h6>
                 </section>
 
