Added link to applicative presentation from Jamboard.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <ol class="alternating-colors">
     <li>
         <strong>
-            Applicative
+            <a href="presentation/applicative-intuition/revealjs/demo.html">Applicative</a>
         </strong>
         <p>An intuition for the applicative type class.</p>
     </li>
