--- a/demo.html
+++ b/demo.html
@@ -231,7 +231,7 @@
                             <li>given the chance, will also break down the analogy</li>
                         </ul>
                     </div>
-                    <div class="place-wide" style="display: flex; transform: scale(0.6); width: 100%; justify-content: space-evenly; align-items: center; gap: 10px;">
+                    <div class="place-wide" style="display: flex; transform: scale(0.6); width: 100%; justify-content: center; align-items: center; gap: 10px;">
                         <img alt src="presentation/slide-5-digestion/slime-with-crystal.svg"/>
                         <div class="overlap-children" style="align-items: center; justify-items: center; padding-right: 70px">
                             <div style="display: flex; align-items: center; gap: 10px">
