Replace "Interpolation" with "String interpolation".

--- a/demo.html
+++ b/demo.html
@@ -125,7 +125,7 @@
             <div class="slides">
                 <section class="grid-layout title-page">
                     <h2><code>Oops(I bracketed again)</code></h2>
-                    <h6>Interpolation gone wrong</h6>
+                    <h6>String interpolation gone wrong</h6>
                 </section>
 
                 <section class="grid-layout title-page">
