--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,7 @@
             }
 
             :not(pre) > code {
-                color: #f92672;
+                color: #E93D25;
             }
 
             .reveal pre[data-auto-animate-target] {
